--- a/Terimbehre.html
+++ b/Terimbehre.html
@@ -22,12 +22,12 @@
 	<H2> <a href="locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
 
 
-	<div data-role="main" class="ui-content">
+	<div data-role="main" class="ui-content" style="padding: 0">
 
 	<center><img src="images/terimbehre.png" width="500px"></img></center>
 
-	<div data-role="collapsible">
-		<h1>Overview</h1>
+		<div data-role="collapsible" style="padding: 0">
+			<h1>Overview</h1>
 			<div id="overview">
 				Terimbehre is the capital of the republic of Murasa, located on the western coast of the small continent of N'Tare. Fifteen years before the party started on their journey, a rapid expansion of the long dormant <a href="wither.html">Wither</a> in central Murasa drove many refugees into the city, though few were able to secure the transport elsewhere they were seeking. 
 
@@ -37,14 +37,12 @@
 			</div>
 		</div>
 	</div>
-
-  
-    <div data-role="main" class="ui-content">
-    <div data-role="collapsible">
+    <div data-role="main" class="ui-content" style="padding: 0">
+    <div data-role="collapsible" style="padding: 0">
       <h1>Discovered Locations</h1>
 		<div id="locations">
 
-			<div data-role="collapsible">
+			<div data-role="collapsible" >
 				<h4>City Barracks</h4>
 					<div>
 						The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="zeke.html">Zeke</a> to load supplies from a dock <a href="wither.html">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.
@@ -89,8 +87,8 @@
   
   
 
-    <div data-role="main" class="ui-content">
-    <div data-role="collapsible">
+    <div data-role="main" class="ui-content" style="padding: 0">
+    <div data-role="collapsible" style="padding: 0">
       <h1>Notable NPCs</h1>
 		<div id="locations">
 		
@@ -122,26 +120,23 @@
 
 
 <div id="sidebar">
+	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
 
-<h3> Browse Other Pages</h3>
-
-<ul>
-<li> <a href="index.html">Wiki Home</a></li>
-<BR>
-<li> <a href=locations.html>Locations</a>
-<BR> &nbsp; &nbsp; ⇒Murasa
-<BR> &nbsp; &nbsp; &nbsp; &nbsp;⇒Terimbehre
-</li>
-<BR>
-<li> <a href=events.html>Events</a></li>
-<BR>
-<li> <a href=npcs.html>NPCs</a></li>
-<BR>
-<li> <a href=sessions.html>Sessions</a></li>
-</ul>
-
-
-<div>
+	<ul style="clear: both">
+		<li> <a href="index.html">Wiki Home</a></li>
+		<BR>
+		<li> <a href=locations.html>Locations</a>
+			<BR> &nbsp; &nbsp; ⇒Murasa
+			<BR> &nbsp; &nbsp; &nbsp; &nbsp;⇒Terimbehre
+		</li>
+		<BR>
+		<li> <a href=events.html>Events</a></li>
+		<BR>
+		<li> <a href=npcs.html>NPCs</a></li>
+		<BR>
+		<li> <a href=sessions.html>Sessions</a></li>
+	</ul>
+</div>
 
 <BR><BR><BR><BR>
 
