--- a/index.html
+++ b/index.html
@@ -1,7 +1,52 @@
+
 <!DOCTYPE html>
+
 <html>
+
+
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/wiki.css">
+</head>
+<Title>Tales of the Strangled Goblin</Title>
 <body>
-<h1>Page Test</h1>
-<p>Nothing to see here...</p>
+
+
+<div id="wikimain">
+	<CENTER>
+		<H2>Wiki for the Strangled-Goblin Campaign</H2>
+
+		<BR><BR>
+		Staring: Beth Rogan, Chuck Squashblossom and Harren Treefriend (featuring Inspector Wolf)
+		<img src="images/stick_party.png" width="500"></img>
+	</CENTER>
+
+</div>
+
+
+
+
+
+<div id="sidebar">
+	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
+
+	<ul style="clear: both">
+		<li> <a href="index.html">Wiki Home</a></li>
+		<BR>
+		<li> <a href=locations.html>Locations</a></li>
+		<BR>
+		<li> <a href=events.html>Events</a></li>
+		<BR>
+		<li> <a href=npcs.html>NPCs</a></li>
+		<BR>
+		<li> <a href=sessions.html>Sessions</a></li>
+	</ul>
+</div>
+
+
+
 </body>
 </html>
