--- a/Locations.html
+++ b/Locations.html
@@ -3,6 +3,11 @@
 
 <!DOCTYPE html>
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/wiki.css">
 <Title>Locations</Title>
 <body>
 <style>
@@ -17,30 +22,56 @@
 }
 </style>
 
-<div class="newspaper">
 
-<BR> <a href="locations/beachlanding.html">Beach Landing Area</a>
-<BR> <a href="locations/qalin.html">Qalin (Island)</a>
-<BR> <a href="locations/funguscave_qalin.html">Fungus Cave (Qalin)</a>
-<BR> <a href="locations/abandonedhalls_qalin.html">Abandoned Halls (Qalin)</a>
-<BR> <a href="locations/jungleruins_qalin.html">Jungle Ruins (Qalin)</a>
-<BR> <a href="locations/goblinpond_qalin.html">Goblin Pond (Qalin)</a>
-<BR> <a href="locations/islandmarsh_qalin.html">Island Marsh (Qalin)</a>
-<BR> <a href="locations/islandwasteland_qalin.html">Island Wasteland (Qalin)</a>
-<BR> <a href="locations/watchtower_qalin.html">Watchtower (Qalin)</a>
-<BR> <a href="locations/terimbehre.html">Terimbehre</a>
-<BR> <a href="locations/market_terimbehre.html">Market (Terimbehre)</a>
-<BR> <a href="locations/warehouse_terimbehre.html">Warehouse (Terimbehre)</a>
-<BR> <a href="locations/docks_terimbehre.html">Docks (Terimbehre)</a>
-<BR> <a href="locations/location1.html">Location 1</a>
-<BR> <a href="locations/location1.html">Location 1</a>
-<BR> <a href="locations/location1.html">Location 1</a>
-<BR> <a href="locations/location1.html">Location 1</a>
-<BR> <a href="locations/location1.html">Location 1</a>
 
+<div id="wikimain">
+
+	<CENTER> <H2> World Locations</H2> </CENTER>
+
+	<div class="newspaper" style="clear: both">
+
+			 <a href="locations/terimbehre.html">Terimbehre (City)</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="locations/market_terimbehre.html#barracks">Barracks</a>			 
+		<BR> &nbsp; &nbsp; ⇒<a href="locations/market_terimbehre.html#market">Market</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="locations/warehouse_terimbehre.html#warehouse">Warehouse</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="locations/docks_terimbehre.html#docks">Docks</a>
+		<BR>
+		<BR> <a href="locations/beachlanding.html">Beach Landing Area</a>
+		<BR> <a href="locations/qalin.html">Qalin (Island)</a>
+		<BR> <a href="locations/funguscave_qalin.html">Fungus Cave (Qalin)</a>
+		<BR> <a href="locations/abandonedhalls_qalin.html">Abandoned Halls (Qalin)</a>
+		<BR> <a href="locations/jungleruins_qalin.html">Jungle Ruins (Qalin)</a>
+		<BR> <a href="locations/goblinpond_qalin.html">Goblin Pond (Qalin)</a>
+		<BR> <a href="locations/islandmarsh_qalin.html">Island Marsh (Qalin)</a>
+		<BR> <a href="locations/islandwasteland_qalin.html">Island Wasteland (Qalin)</a>
+		<BR> <a href="locations/watchtower_qalin.html">Watchtower (Qalin)</a>
+
+		<BR> <a href="locations/location1.html">Location 1</a>
+		<BR> <a href="locations/location1.html">Location 1</a>
+		<BR> <a href="locations/location1.html">Location 1</a>
+		<BR> <a href="locations/location1.html">Location 1</a>
+		<BR> <a href="locations/location1.html">Location 1</a>
+
+	</div>
 </div>
 
 
+
+<div id="sidebar">
+	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
+
+	<ul style="clear: both">
+		<li> <a href="index.html">Wiki Home</a></li>
+		<BR>
+		<li> <b>Locations</b></li>
+		<BR>
+		<li> <a href=events.html>Events</a></li>
+		<BR>
+		<li> <a href=npcs.html>NPCs</a></li>
+		<BR>
+		<li> <a href=sessions.html>Sessions</a></li>
+	</ul>
+</div>
 
 
 </body>
