--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<ul style="clear: both">
 		<li> <a href="index.html">Wiki Home</a></li>
 		<BR>
-		<li> <a href=locations.html>Locations</a></li>
+		<li> <a href=Locations.html>Locations</a></li>
 		<BR>
 		<li> <a href=events.html>Events</a></li>
 		<BR>
