--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -42,21 +42,21 @@
       <h1>Discovered Locations</h1>
 		<div id="locations">
 
-			<div data-role="collapsible" id="barracks">
+			<div data-role="collapsible" >
 				<h4>City Barracks</h4>
 					<div>
 						The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="zeke.html">Zeke</a> to load supplies from a dock <a href="wither.html">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.
 					</div>
 			</div>
 			
-			<div data-role="collapsible" id="market">
+			<div data-role="collapsible">
 				<h4>Market</h4>
 					<div>
 					<i>"As you make your way towards the harbour you see various signs of the city’s distress. The once bustling market square has been reduced to a few dozen stalls, mostly peddling fake charms against the Wither. All of the food stalls have closed, as the Guard instituted rationing a month ago. The people aren’t starving, yet, but a sense of desperation is obvious. The city Guard are stationed on nearly every corner, watching for trouble. Signs of protest are clear, with several painted messages blaming the <a href="preservers.html">Preservers</a> for the hardship. Guardian Isaro hasn’t yet instituted martial law, but rumours suggest it could happen as early as next week."</i>
 					</div>
 			</div>
 
-			<div data-role="collapsible" id="warehouse">
+			<div data-role="collapsible">
 				<h4>Warehouse</h4>
 					<div>
 					<i>"You arrive at the agreed upon location, a small dock on the little-used Southern side of the harbour. A ramshackle building is perched on the end of the pier, and a rowboat is moored next to it. As you step inside the warehouse you are hit with the smell of dust and mildew. Light from the open door and several gaps in the wooden walls reveal a large single room, with piles of crates, sacks and bags stacked haphazardly. You are able to see roughly thirty feet before the dimness hides the rest of the warehouse from view. Towards the back of the room you see a cleared spot amongst the boxes, near a set of loading doors that clearly haven’t been used in years. You see the sacks of salt Zeke asked for a few feet ahead, but the crate and barrel must be somewhere else in the gloom."</i>
@@ -69,7 +69,7 @@
 			</div>			
 
 
-			<div data-role="collapsible" id="docks">
+			<div data-role="collapsible">
 				<h4>City Docks</h4>
 					<div>
 						<i>"You look up to see a crowd of men approaching, several of them armed with makeshift weapons. Zeke mutters to you under your breath: “They’re after the boat. We can’t let them take it, but if a brawl breaks out the Guard will have all of us locked up until they can sort it out. The Captain will wait for a little while, but if we’re not on board by sunset he’ll have to leave. See if you can talk some sense into these idiots.”. The group comes to a stop 10 feet away. A large man in tattered black leather armor gestures to the rowboat with a rusted shortsword: “We’ll be taking that boat now. You don’t have to get hurt, but we’re not taking no for an answer.” Another man lost in the crowd yells: “You tell ‘em Bill! We’re getting out of this hellhole!”</i>
