--- a/Locations.html
+++ b/Locations.html
@@ -22,7 +22,11 @@
 }
 </style>
 
-
+<script>
+$(document).ready(function () {
+  location.hash && $(location.hash + '.collapse').collapse('show');
+});
+</script>
 
 <div id="wikimain">
 
