--- a/Locations.html
+++ b/Locations.html
@@ -34,27 +34,27 @@ $(document).ready(function () {
 
 	<div class="newspaper" style="clear: both">
 
-			 <a href="locations/terimbehre.html">Terimbehre (City)</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="locations/market_terimbehre.html#barracks">Barracks</a>			 
-		<BR> &nbsp; &nbsp; ⇒<a href="locations/market_terimbehre.html#market">Market</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="locations/warehouse_terimbehre.html#warehouse">Warehouse</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="locations/docks_terimbehre.html#docks">Docks</a>
+			 <a href="/locations/terimbehre.html">Terimbehre (City)</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#barracks">Barracks</a>			 
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#market">Market</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#warehouse">Warehouse</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#docks">Docks</a>
 		<BR>
-		<BR> <a href="locations/beachlanding.html">Beach Landing Area</a>
-		<BR> <a href="locations/qalin.html">Qalin (Island)</a>
-		<BR> <a href="locations/funguscave_qalin.html">Fungus Cave (Qalin)</a>
-		<BR> <a href="locations/abandonedhalls_qalin.html">Abandoned Halls (Qalin)</a>
-		<BR> <a href="locations/jungleruins_qalin.html">Jungle Ruins (Qalin)</a>
-		<BR> <a href="locations/goblinpond_qalin.html">Goblin Pond (Qalin)</a>
-		<BR> <a href="locations/islandmarsh_qalin.html">Island Marsh (Qalin)</a>
-		<BR> <a href="locations/islandwasteland_qalin.html">Island Wasteland (Qalin)</a>
-		<BR> <a href="locations/watchtower_qalin.html">Watchtower (Qalin)</a>
+		<BR> <a href="/locations/beachlanding.html">Beach Landing Area</a>
+		<BR> <a href="/locations/qalin.html">Qalin (Island)</a>
+		<BR> <a href="/locations/funguscave_qalin.html">Fungus Cave (Qalin)</a>
+		<BR> <a href="/locations/abandonedhalls_qalin.html">Abandoned Halls (Qalin)</a>
+		<BR> <a href="/locations/jungleruins_qalin.html">Jungle Ruins (Qalin)</a>
+		<BR> <a href="/locations/goblinpond_qalin.html">Goblin Pond (Qalin)</a>
+		<BR> <a href="/locations/islandmarsh_qalin.html">Island Marsh (Qalin)</a>
+		<BR> <a href="/locations/islandwasteland_qalin.html">Island Wasteland (Qalin)</a>
+		<BR> <a href="/locations/watchtower_qalin.html">Watchtower (Qalin)</a>
 
-		<BR> <a href="locations/location1.html">Location 1</a>
-		<BR> <a href="locations/location1.html">Location 1</a>
-		<BR> <a href="locations/location1.html">Location 1</a>
-		<BR> <a href="locations/location1.html">Location 1</a>
-		<BR> <a href="locations/location1.html">Location 1</a>
+		<BR> <a href="/locations/location1.html">Location 1</a>
+		<BR> <a href="/locations/location1.html">Location 1</a>
+		<BR> <a href="/locations/location1.html">Location 1</a>
+		<BR> <a href="/locations/location1.html">Location 1</a>
+		<BR> <a href="/locations/location1.html">Location 1</a>
 
 	</div>
 </div>
@@ -65,15 +65,15 @@ $(document).ready(function () {
 	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
-		<li> <a href="index.html">Wiki Home</a></li>
+		<li> <a href="/index.html">Wiki Home</a></li>
 		<BR>
 		<li> <b>Locations</b></li>
 		<BR>
-		<li> <a href=events.html>Events</a></li>
+		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href=npcs.html>NPCs</a></li>
+		<li> <a href="/npcs.html">NPCs</a></li>
 		<BR>
-		<li> <a href=sessions.html>Sessions</a></li>
+		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
 </div>
 
