--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 	<ul style="clear: both">
 		<li> <a href="index.html">Wiki Home</a></li>
 		<BR>
-		<li> <a href=Locations.html>Locations</a></li>
+		<li> <a href="/Locations.html">Locations</a></li>
 		<BR>
-		<li> <a href=events.html>Events</a></li>
+		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href=npcs.html>NPCs</a></li>
+		<li> <a href="/npcs.html">NPCs</a></li>
 		<BR>
-		<li> <a href=sessions.html>Sessions</a></li>
+		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
 </div>
 
