--- a/Terimbehre.html
+++ b/Terimbehre.html
@@ -19,12 +19,12 @@
 
 
 <div id="wikimain">
-	<H2> <a href="locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
+	<H2> <a href="Locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
 
 
 	<div data-role="main" class="ui-content" style="padding: 0">
 
-	<center><img src="images/terimbehre.png" width="500px"></img></center>
+	<center><img src="/images/terimbehre.png" width="500px"></img></center>
 
 		<div data-role="collapsible" style="padding: 0">
 			<h1>Overview</h1>
@@ -123,18 +123,18 @@
 	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
-		<li> <a href="index.html">Wiki Home</a></li>
+		<li> <a href="/index.html">Wiki Home</a></li>
 		<BR>
-		<li> <a href=Locations.html>Locations</a>
+		<li> <a href="/Locations.html">Locations</a>
 			<BR> &nbsp; &nbsp; ⇒Murasa
 			<BR> &nbsp; &nbsp; &nbsp; &nbsp;⇒Terimbehre
 		</li>
 		<BR>
-		<li> <a href=events.html>Events</a></li>
+		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href=npcs.html>NPCs</a></li>
+		<li> <a href="/npcs.html">NPCs</a></li>
 		<BR>
-		<li> <a href=sessions.html>Sessions</a></li>
+		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
 </div>
 
