--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -120,7 +120,7 @@
 
 
 <div id="sidebar">
-	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
+	<h3 style="float: left"> Browse Other Pages</h3><img src="/images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
 		<li> <a href="/index.html">Wiki Home</a></li>
