--- a/Locations.html
+++ b/Locations.html
@@ -35,10 +35,10 @@ $(document).ready(function () {
 	<div class="newspaper" style="clear: both">
 
 			 <a href="/locations/terimbehre.html">Terimbehre (City)</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#barracks">Barracks</a>			 
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#market">Market</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#warehouse">Warehouse</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#docks">Docks</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#barracks">Barracks</a>			 
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#market">Market</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#warehouse">Warehouse</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#docks">Docks</a>
 		<BR>
 		<BR> <a href="/locations/beachlanding.html">Beach Landing Area</a>
 		<BR> <a href="/locations/qalin.html">Qalin (Island)</a>
