--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -19,7 +19,7 @@
 
 
 <div id="wikimain">
-	<H2> <a href="Locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
+	<H2> <a href="/Locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
 
 
 	<div data-role="main" class="ui-content" style="padding: 0">
