--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
-		<li> <a href="index.html">Wiki Home</a></li>
+		<li> <b>Wiki Home</b></li>
 		<BR>
 		<li> <a href="/Locations.html">Locations</a></li>
 		<BR>
