--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -5,11 +5,20 @@
 <html>
 
 
+
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script>
+$(document).ready(function () {
+  if (location.hash){
+    $(location.hash).collapse('show');
+    $(location.hash).parents('.accordion-body').collapse('show');
+  }
+});
+</script>
 <link rel="stylesheet" type="text/css" href="css/wiki.css">
 </head>
 <Title>Locations: Terimbehre</Title>
