--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -12,11 +12,8 @@
 <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 <script>
-$(document).ready(function () {
-  if (location.hash){
-    $(location.hash).collapse('show');
-    $(location.hash).parents('.accordion-body').collapse('show');
-  }
+$(document).ready(function() {
+   $(window.location.hash).addClass('collapse in');
 });
 </script>
 <link rel="stylesheet" type="text/css" href="css/wiki.css">
