--- a/Locations.html
+++ b/Locations.html
@@ -35,8 +35,8 @@ $(document).ready(function () {
 	<div class="newspaper" style="clear: both">
 
 			 <a href="/locations/terimbehre.html">Terimbehre (City)</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#barracks">Barracks</a>			 
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#market">Market</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#barracks" onclick="return (document.getElementById('barracks').style.display=='none') ? toggleMe('barracks') : true;">Barracks</a>			 
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#wikimain">Market</a>
 		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#warehouse">Warehouse</a>
 		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#docks">Docks</a>
 		<BR>
