--- a/Locations.html
+++ b/Locations.html
@@ -4,10 +4,12 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/wiki.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
+<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
+<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
+<link rel="stylesheet" type="text/css" href="/css/wiki.css">
+
 <Title>Locations</Title>
 <body>
 <style>
@@ -20,7 +22,11 @@
     -moz-column-gap: 40px; /* Firefox */
     column-gap: 40px;
 }
+
 </style>
+
+
+
 
 
 <div id="wikimain">
@@ -29,11 +35,11 @@
 
 	<div class="newspaper" style="clear: both">
 
-			 <a href="/locations/terimbehre.html">Terimbehre (City)</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#barracks" onclick="return (document.getElementById('barracks').style.display=='none') ? toggleMe('barracks') : true;">Barracks</a>			 
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#wikimain">Market</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#warehouse">Warehouse</a>
-		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html/#docks">Docks</a>
+			 <a href="/locations/terimbehre.html" rel="external">Terimbehre (City)</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#expand-1"  rel="external">Barracks</a>			 
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#expand-2" rel="external">Market</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#expand-3" rel="external">Warehouse</a>
+		<BR> &nbsp; &nbsp; ⇒<a href="/locations/terimbehre.html#expand-4" rel="external">Docks</a>
 		<BR>
 		<BR> <a href="/locations/beachlanding.html">Beach Landing Area</a>
 		<BR> <a href="/locations/qalin.html">Qalin (Island)</a>
