--- a/Locations.html
+++ b/Locations.html
@@ -4,10 +4,7 @@
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
-<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
-<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
+<script src="/javascript/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/wiki.css">
 
 <Title>Locations</Title>
