--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -8,10 +8,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
-<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
-<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
+<script src="/javascript/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/wiki.css">
 </head>
 <Title>Locations: Terimbehre</Title>
