--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -41,7 +41,7 @@
 		<h1>Discovered Locations</h1>
 			<div>	<p class="expand" id="expand-1">&#9735; City Barracks</p></div>
 			<div class="expandable" id="expandable-1">
-				<p class="revealed">The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="#expand-6" onclick="$('#expandable-6').show();">Zeke</a> to load supplies from a dock <a href="wither.html">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.</p>
+				<p class="revealed">The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="#expand-6" onclick="$('#expandable-6').show();">Zeke</a> to load supplies from a dock <a href="#expand-4" onclick="$('#expandable-4').show();">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.</p>
 			</div>
 		
 			<div>	<p class="expand" id="expand-2">&#9735; Market</p></div>
@@ -55,7 +55,7 @@
 					<i>"You arrive at the agreed upon location, a small dock on the little-used Southern side of the harbour. A ramshackle building is perched on the end of the pier, and a rowboat is moored next to it. As you step inside the warehouse you are hit with the smell of dust and mildew. Light from the open door and several gaps in the wooden walls reveal a large single room, with piles of crates, sacks and bags stacked haphazardly. You are able to see roughly thirty feet before the dimness hides the rest of the warehouse from view. Towards the back of the room you see a cleared spot amongst the boxes, near a set of loading doors that clearly haven’t been used in years. You see the sacks of salt Zeke asked for a few feet ahead, but the crate and barrel must be somewhere else in the gloom."</i>
 
 					<BR><BR>
-					<center><img src="images/warehouse.png" width="500"></img></center><BR>
+					<center><img src="/images/warehouse.png" width="500"></img></center><BR>
 					A non-descript warehouse near the docks was the appointed location to meet Zeke, quartermaster for the <a href="rakoro.html">Rakoro</a>. Before the party could row out to the ship, they helped Zeke load the remaining supplies onto his boat, fighting off several rats and uncovering clues to an attack on the city barracks.
 				</div>
 			</div>
