--- a/locations/terimbehre.html
+++ b/locations/terimbehre.html
@@ -19,7 +19,7 @@
 
 
 
-	<H2> <a href="/Locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
+	<H2> <a href="/locations.html">Location:</a> Terimbehre - Capital City of Murasa, on the continent of N'Tare</H2>
 
 
 	<div data-role="main" class="ui-content" style="padding: 0">
@@ -41,7 +41,7 @@
 		<h1>Discovered Locations</h1>
 			<div>	<p class="expand" id="expand-1">&#9735; City Barracks</p></div>
 			<div class="expandable" id="expandable-1">
-				<p class="revealed">The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="#expand-6" onclick="$('#expandable-6').show();">Zeke</a> to load supplies from a dock <a href="#expand-4" onclick="$('#expandable-4').show();">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.</p>
+				<p class="revealed">The Terimbehre City Guard have effectively been folded into the ranks of the <a href="preservers.html">Preservers</a>, though some members still loyal to the Red Council remain. While working for <a href="#expand-6" onclick="$('#expandable-6').show();">Zeke</a> to load supplies from a dock <a href="#expand-3" onclick="$('#expandable-3').show();">warehouse</a>, the party discovered a cache of Guard uniforms, plans and a map of the nearest barracks, suggesting that some of the local populance had been planning an attack or revolt.</p>
 			</div>
 		
 			<div>	<p class="expand" id="expand-2">&#9735; Market</p></div>
@@ -106,7 +106,7 @@
 	<ul style="clear: both">
 		<li> <a href="/index.html">Wiki Home</a></li>
 		<BR>
-		<li> <a href="/Locations.html">Locations</a>
+		<li> <a href="/locations.html">Locations</a>
 			<BR> &nbsp; &nbsp; &#8658; Murasa
 			<BR> &nbsp; &nbsp; &nbsp; &nbsp; &#8658; Terimbehre
 		</li>
