--- a/Locations.html
+++ b/Locations.html
@@ -1,10 +1,14 @@
 
 
 
+
 <!DOCTYPE html>
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="/javascript/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<!--<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">-->
+<!--<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>-->
+<!--<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
 <link rel="stylesheet" type="text/css" href="/css/wiki.css">
 
 <Title>Locations</Title>
@@ -19,7 +23,9 @@
     -moz-column-gap: 40px; /* Firefox */
     column-gap: 40px;
 }
+
 </style>
+
 
 
 
