--- a/npcs.html
+++ b/npcs.html
@@ -7,7 +7,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="/javascript/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="css/wiki.css">
+<link rel="stylesheet" type="text/css" href="/css/wiki.css">
 </head>
 <Title>Tales of the Strangled Goblin</Title>
 <body>
