--- a/npc/vaetr.html
+++ b/npc/vaetr.html
@@ -20,7 +20,7 @@
 
 	<div data-role="main" class="ui-content" style="padding: 0">
 
-	<center><img src="/images/vaetr_symbol.png" width="500px"></img></center>
+	<!--<center><img src="/images/vaetr_symbol.png" width="500px"></img></center> -->
 
 		<h1>Overview</h1>
 		<div id="overview">
@@ -79,7 +79,7 @@ the Vaetr so far has been limited to a few squad members from "the Fourth".
 
 
 <div id="sidebar">
-	<h3 style="float: left"> Browse Other Pages</h3><img src="images/SG_icon.png" width="60" style="float: right"></img>
+	<h3 style="float: left"> Browse Other Pages</h3><img src="/images/SG_icon.png" width="60" style="float: right"></img>
 
 	<ul style="clear: both">
 		<li> <a href="/index.html">Wiki Home</a></li>
