--- a/npc/vaetr.html
+++ b/npc/vaetr.html
@@ -25,7 +25,7 @@
 		<h1>Overview</h1>
 		<div id="overview">
 		Not much is yet known about the Empire of Vaetr, other than that they are not native to the continent of Kabora, having arrived from the North-East. What little exposure the party has had to 
-the Vaetr so far has been limited to a few squad members from "the Fourth".		
+the Vaetr so far has been limited to a few squad members from "the Fourth", the majority of whom are located North of where the party landed ofter being shipwrecked.		
 		</div>
 	</div>
 	
