--- a/npc/ughr.html
+++ b/npc/ughr.html
@@ -9,22 +9,22 @@
 <script src="/javascript/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/css/wiki.css">
 </head>
-<Title>The Gell</Title>
+<Title>The Ughr</Title>
 <body>
 
 
 <div id="wikimain">
 
-	<H2> <a href="/npcs.html">NPCs:</a>The Gell</H2>
+	<H2> <a href="/npcs.html">NPCs:</a>The Ughr</H2>
 
 
 	<div data-role="main" class="ui-content" style="padding: 0">
 
-	<center><img src="/images/gell.png" width="300px"></img></center>
+	<center><img src="/images/ughr.jpg" width="300px"></img></center>
 
 		<h1>Overview</h1>
 		<div id="overview">
-		The Gell are a race of reptilian humanoids - somewhat similar to the Ughr encountered briefly on the island of Qalin, though considerably more hostile.
+		The Ughr are a race of reptilian humanoids - somewhat similar to <a href="/npc/gell">the Gell</a> encountered on Kebora, though considerably less hostile.
 		</div>
 	</div>
 	
@@ -32,12 +32,10 @@
 
 	<div id="locations">
 		<h1>Encounters with the party</h1>
-			<div>	<p class="expand" id="expand-1">&#9735; An Elvish delegation in the forest</p></div>
+			<div>	<p class="expand" id="expand-1">&#9735; The Goblin Halls of Qalin</p></div>
 			<div class="expandable" id="expandable-1">
 				<p class="revealed"> 
-				Sour, a squad mage from <a href="/npc/vaetr">the Fourth</a>, asked the party to investigate an area of null magic in a nearby forest. Tracking the signs of a struggle, the trio assisted a group 
-				of half-elves in defeating a hunting party of Gell, as well as the Hill Giant Klagg. The elf prince <a href="/npcs/reach_elves.html#expand-20"  rel="external">Rudzi</a> was part of the elvish group, who were heading North for a treaty signing. While helping 
-				treat their injured, Harren was surpised at the firm refusal of his magical healing, but respected the request of the elves.
+				While exploring a Dwarven ruin on the strange island of Qalin, the party noticed a an Ughr watching them closely. After following the creature back to it's small tribe, the trio convinced the leader, Ughr-eshi, that they were peaceful.
 				
 				</p>
 			</div>
@@ -50,7 +48,12 @@
     <h1>Notable NPCs</h1>
 		<div id="npcs">
 		
-			
+		<div>	<p class="expand" id="expand-20">&#9735; Ughr-eshi</p></div>
+			<div class="expandable" id="expandable-21">
+				<div class="revealed">
+					A larger and seemingly more inteligent member of the Ughr tribe encountered on Qalin, Ughr-eshi appears to serve as their leader.
+				</div>
+			</div>
 		
 		</div>
 </div>
