--- a/npc/vaetr.html
+++ b/npc/vaetr.html
@@ -88,9 +88,9 @@ the Vaetr so far has been limited to a few squad members from "the Fourth", the 
 		<BR>
 		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href="/npcs.html">NPCs</a></li>
+		<li> <b>NPCs</b> </li>
 		<BR>
-		<li> <b>Sessions</b></li>
+		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
 </div>
 
