--- a/npc/reach_elves.html
+++ b/npc/reach_elves.html
@@ -86,11 +86,12 @@
 		<BR>
 		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <a href="/npcs.html">NPCs</a></li>
+		<li> <b>NPCs</b> </li>
 		<BR>
-		<li> <b>Sessions</b></li>
+		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
 </div>
+
 
 
 
