--- a/npc/vaetr.html
+++ b/npc/vaetr.html
@@ -20,7 +20,7 @@
 
 	<div data-role="main" class="ui-content" style="padding: 0">
 
-	<!--<center><img src="/images/vaetr_symbol.png" width="500px"></img></center> -->
+	<center><img src="/images/vaetr_badge.jpg" width="200px"></img></center> 
 
 		<h1>Overview</h1>
 		<div id="overview">
