--- a/npc/gell.html
+++ b/npc/gell.html
@@ -24,7 +24,7 @@
 
 		<h1>Overview</h1>
 		<div id="overview">
-		The Gell are a race of reptilian humanoids - somewhat similar to the Ughr encountered briefly on the island of Qalin, though considerably more hostile.
+		The Gell are a race of reptilian humanoids - somewhat similar to <a href="/npc/ughr">the Ughr</a> encountered briefly on the island of Qalin, though considerably more hostile.
 		</div>
 	</div>
 	
@@ -36,7 +36,7 @@
 			<div class="expandable" id="expandable-1">
 				<p class="revealed"> 
 				Sour, a squad mage from <a href="/npc/vaetr">the Fourth</a>, asked the party to investigate an area of null magic in a nearby forest. Tracking the signs of a struggle, the trio assisted a group 
-				of half-elves in defeating a hunting party of Gell, as well as the Hill Giant Klagg. The elf prince <a href="/npcs/reach_elves.html#expand-20"  rel="external">Rudzi</a> was part of the elvish group, who were heading North for a treaty signing. While helping 
+				of half-elves in defeating a hunting party of Gell, as well as the Hill Giant Klagg. The elf prince <a href="/npc/reach_elves.html#expand-20"  rel="external">Rudzi</a> was part of the elvish group, who were heading North for a treaty signing. While helping 
 				treat their injured, Harren was surpised at the firm refusal of his magical healing, but respected the request of the elves.
 				
 				</p>
