--- a/npc/reach_elves.html
+++ b/npc/reach_elves.html
@@ -38,7 +38,7 @@
 			<div class="expandable" id="expandable-1">
 				<p class="revealed"> 
 				Sour, a squad mage from <a href="/npc/vaetr">the Fourth</a>, asked the party to investigate an area of null magic in a nearby forest. Tracking the signs of a struggle, the trio assisted a group 
-				of half-elves in defeating a hunting party of <a href="/npcs/gell.html"  rel="external">Gell</a>, as well as the Hill Giant Klagg. The elf prince Rudzi was part of the elvish group, who were heading North for a treaty signing. While helping 
+				of half-elves in defeating a hunting party of <a href="/npcs/gell.html"  rel="external">Gell</a>, as well as the Hill Giant Klagg. The elf prince Rudzi was part of the elvish group, who were heading North for a <a href="/events/northern_treaty.html">treaty signing</a>. While helping 
 				treat their injured, Harren was surpised at the firm refusal of his magical healing, but respected the request of the elves.
 				
 				</p>
