--- a/npc/vaetr.html
+++ b/npc/vaetr.html
@@ -56,7 +56,7 @@ the Vaetr so far has been limited to a few squad members from "the Fourth", the 
 			<div>	<p class="expand" id="expand-21">&#9735; Sour</p></div>
 			<div class="expandable" id="expandable-21">
 				<div class="revealed">
-					Squad mage serving in the Fourth with Dirge and Thumbs.
+					Squad mage serving in the Fourth with Dirge and Thumbs. The party helped him track down the <a href="/npc/reach_elves.html#expand-1"  rel="external">source of a local anti-magic field</a>.
 				</div>
 			</div>
 
