--- a/events/northern_treaty.html
+++ b/events/northern_treaty.html
@@ -34,7 +34,7 @@
     <h1>Participating Factions</h1>
 		<div id="npcs">
 		
-	 <table style="width:100%">
+	 <table style="width:100%; border:1">
   <tr>
     <th>Faction</th>
     <th>Description</th> 
@@ -64,7 +64,7 @@
     <td>Unknown Group</td>
     <td>Nothing is known about this group yet.</td> 
   </tr>
-  
+  </table>
 		</div>
 </div>
  
