--- a/items/coded_journal.html
+++ b/items/coded_journal.html
@@ -33,7 +33,7 @@
 	<div id="locations">
 		<h1>Translated Pages</h1>
 			
-	 <table style="width:100%">
+	 <table style="width:100%; border: 1px solid black;">
   <tr>
     <th>Page</th>
     <th>Contents</th> 
