--- a/events/northern_treaty.html
+++ b/events/northern_treaty.html
@@ -34,7 +34,7 @@
     <h1>Participating Factions</h1>
 		<div id="npcs">
 		
-	 <table style="width:100%; border:1">
+	 <table style="width:100%; border: 1px solid black;">
   <tr>
     <th>Faction</th>
     <th>Description</th> 
