--- a/items/coded_journal.html
+++ b/items/coded_journal.html
@@ -41,57 +41,57 @@
 
 
   <tr>
-    <td>1</td>
+    <td style="border: 1px solid black;">1</td>
     <td>Details discussion with Preserver leadership over use of the Orb for the Journey</td> 
   </tr>
 
    <tr>
-    <td>4</td>
+    <td style="border: 1px solid black;">4</td>
     <td>Details his initial examinations of the Orb, it’s apparent ability to both absorb, transform and transmit enormous amounts of magical energy</td> 
   </tr>
 
    <tr>
-    <td>7</td>
+    <td style="border: 1px solid black;">7</td>
     <td>Details history of Orb in musing on it’s origin. Suggests that Orb was recovered from underground site in the Western wilderness of Murasa, approximately at the time that the Wither accelerate. Evidence suggests both Elvish and Dwarvish origins, but traces of a third, unidentified party.</td> 
   </tr>
 
    <tr>
-    <td>9</td>
+    <td style="border: 1px solid black;">9</td>
     <td>  Details history of Orb in musing on it’s origin. Suggests that Orb was recovered from underground site in the Western wilderness of Murasa, approximately at the time that the Wither accelerate. Evidence suggests both Elvish and Dwarvish origins, but traces of a third, unidentified party.</td> 
   </tr>
   
   
 
   <tr>
-    <td>13</td>
+    <td style="border: 1px solid black;">13</td>
     <td>Details Nirari being assigned to oversee the ship’s journey, his selection of escorts. Suggests he has a secondary purpose, once the ship arrives</td> 
   </tr>
 
   <tr>
-    <td>15</td>
+    <td style="border: 1px solid black;">15</td>
     <td>Details initial inspection of the ship, examination of glyphs and "power needed"</td> 
   </tr>
 
   <tr>
-    <td>21</td>
+    <td style="border: 1px solid black;">21</td>
     <td>Details his initial experiments with the orb and difficulties in accessing the stored power. Musings about it not being a "Deterministic process" and that it seems to resist use</td> 
   </tr>
   
 
   <tr>
-    <td>30</td>
+    <td style="border: 1px solid black;">30</td>
     <td>Details his partial breakthrough in accessing power of the orb, appears to liken the process to Conjuration of entities (Outsiders, etc)</td> 
   </tr>
 
 
   <tr>
-    <td>34</td>
+    <td style="border: 1px solid black;">34</td>
     <td>Details his continued efforts to harness power through ritual binding, but being limited to only a fraction (though seemingly enough to keep ship’s enchantment’s functional). Suspects partial Elvish origin to Orb, as reason for that much ability.</td> 
   </tr>
 
 
   <tr>
-    <td>37</td>
+    <td style="border: 1px solid black;">37</td>
     <td>Technical notes from discussion with Gahiji and evidence gathered from experiments in the ship. Discusses possible modifications to their ritual compulsion to pry more power from Orb.</td> 
   </tr>
 
