--- a/events/northern_treaty.html
+++ b/events/northern_treaty.html
@@ -36,33 +36,33 @@
 		
 	 <table style="width:100%; border: 1px solid black;">
   <tr>
-    <th>Faction</th>
-    <th>Description</th> 
+    <th style="border-bottom: 1px solid #ddd;">Faction</th>
+    <th style="border-bottom: 1px solid #ddd;">Description</th> 
   </tr>
 
   <tr>
-    <td><a href="/npc/reach_elves.html">Elves of the Reach</a></td>
-    <td>An close-knit community of elves and half-elves, located somewhere to the West</td> 
+    <td style="border-bottom: 1px solid #ddd;"><a href="/npc/reach_elves.html">Elves of the Reach</a></td>
+    <td style="border-bottom: 1px solid #ddd;">An close-knit community of elves and half-elves, located somewhere to the West</td> 
   </tr>
 
   <tr>
-    <td><a href="/npc/vaetr.html">Empire of Vaetr</a></td>
-    <td>A recently arrived military group, with the bulk of its forces located to the North</td> 
+    <td style="border-bottom: 1px solid #ddd;"><a href="/npc/vaetr.html">Empire of Vaetr</a></td>
+    <td style="border-bottom: 1px solid #ddd;">A recently arrived military group, with the bulk of its forces located to the North</td> 
   </tr>  
 
   <tr>
-    <td>"The Order"</td>
-    <td>Referenced in passing only, nothing is known about this group yet.</td> 
+    <td style="border-bottom: 1px solid #ddd;">"The Order"</td>
+    <td style="border-bottom: 1px solid #ddd;">Referenced in passing only, nothing is known about this group yet.</td> 
   </tr>  
   
   <tr>
-    <td>Unknown Group</td>
-    <td>Nothing is known about this group yet.</td> 
+    <td style="border-bottom: 1px solid #ddd;">Unknown Group</td>
+    <td style="border-bottom: 1px solid #ddd;">Nothing is known about this group yet.</td> 
   </tr>  
 
   <tr>
-    <td>Unknown Group</td>
-    <td>Nothing is known about this group yet.</td> 
+    <td style="border-bottom: 1px solid #ddd;">Unknown Group</td>
+    <td style="border-bottom: 1px solid #ddd;">Nothing is known about this group yet.</td> 
   </tr>
   </table>
 		</div>
