--- a/items/coded_journal.html
+++ b/items/coded_journal.html
@@ -129,7 +129,7 @@
 		<BR>
 		<li> <a href="/events.html">Events</a></li>
 		<BR>
-		<li> <b>NPCs</b> </li>
+		<li> <a href="/events.html">NPCs</a> </li>
 		<BR>
 		<li> <a href="/sessions.html">Sessions</a></li>
 	</ul>
