--- a/npcs.html
+++ b/npcs.html
@@ -41,6 +41,8 @@
 		<li> <a href="/npcs.html">NPCs</a></li>
 		<BR>
 		<li> <a href="/sessions.html">Sessions</a></li>
+		<BR>
+		<LI> <A HREF="/pp_sessions.html">PP Sessions</a></li>
 	</ul>
 </div>
 
